// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "FcP0tLN]UE",
  },
  "cascadeCreate": true,
  "itemId": "FcP0tLN]UE",
  "portion": 0.324297156650573,
  "recommId": "FcP0tLN]UE",
  "sessionId": "FcP0tLN]UE",
  "timestamp": "FcP0tLN]UE",
  "userId": "FcP0tLN]UE",
}
`;

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: required fields 1`] = `
Object {
  "additionalData": Object {},
  "cascadeCreate": true,
  "itemId": "FcP0tLN]UE",
  "portion": 0.324297156650573,
  "userId": "FcP0tLN]UE",
}
`;

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: should fail when totalLength is 0 1`] = `"The total length of the item cannot be zero."`;

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: should fail when watchTime is greater than totalLength 1`] = `"The watch time of the item cannot be greater than the total length of the item."`;
